--- a/navigation.html
+++ b/navigation.html
@@ -10,16 +10,25 @@
                 <div class="nav-collapse">
                     <ul class="nav pull-right">
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Windows Phone 7 apps <b class="caret"></b></a>
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Windows Phone Apps <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                     <li>
-                                        <a href="http://irc.softwaremk.org" >IRC7</a>
+                                        <a href="http://www.softwaremk.org/irc" >IRC7</a>
                                     </li>
                                     <li>
-                                        <a href="http://ipsnoop.softwaremk.org">IP Snoop</a>
+                                        <a href="http://www.softwaremk.org/ipsnoop">IP Snoop</a>
                                     </li>
                                     <li>
-                                        <a href="http://movieposters.softwaremk.org">Movie Posters</a>
+                                        <a href="http://www.softwaremk.org/movieposters">Movie Posters</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://www.softwaremk.org/ampparit">Ampparit.com Reader</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://www.softwaremk.org/tekstitv">Teletext Finland</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://www.softwaremk.org/viihde">Teletext Finland</a>
                                     </li>
                             </ul>
                         </li>
@@ -27,8 +36,8 @@
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="http://softwaremk.org/index.php/contact" target="_blank" ><i class="icon-inbox"></i> Email</a>
-                                    <a href="http://softwaremk.org/index.php/services"  target="_blank" ><i class="icon-home"></i> Company Information</a>
+                                    <a href="http://comany.softwaremk.org/index.php/contact" target="_blank" ><i class="icon-inbox"></i> Email</a>
+                                    <a href="http://www.softwaremk.org/index.html#services" target="_blank" ><i class="icon-home"></i> Company Information</a>
                                 </li>
                             </ul>
                         </li>
