--- a/navigation.html
+++ b/navigation.html
@@ -28,7 +28,7 @@
                                         <a href="http://www.softwaremk.org/tekstitv">Teletext Finland</a>
                                     </li>
                                     <li>
-                                        <a href="http://www.softwaremk.org/viihde">Teletext Finland</a>
+                                        <a href="http://www.softwaremk.org/viihde">Viihde Manager</a>
                                     </li>
                             </ul>
                         </li>
