--- a/navigation.html
+++ b/navigation.html
@@ -36,7 +36,7 @@
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="http://comany.softwaremk.org/index.php/contact" target="_blank" ><i class="icon-inbox"></i> Email</a>
+                                    <a href="http://company.softwaremk.org/index.php/contact" target="_blank" ><i class="icon-inbox"></i> Email</a>
                                     <a href="http://www.softwaremk.org/index.html#services" target="_blank" ><i class="icon-home"></i> Company Information</a>
                                 </li>
                             </ul>
