--- a/navigation.html
+++ b/navigation.html
@@ -37,7 +37,7 @@
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="http://company.softwaremk.org/index.php/contact" target="_blank" ><i class="icon-inbox"></i> Email</a>
-                                    <a href="http://www.softwaremk.org/index.html#services" target="_blank" ><i class="icon-home"></i> Company Information</a>
+                                    <a href="http://www.softwaremk.org/index.html#services"><i class="icon-home"></i> Company Information</a>
                                 </li>
                             </ul>
                         </li>
