--- a/download.html
+++ b/download.html
@@ -1,6 +1,21 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
+<!-- Google Website Optimizer Tracking Script -->
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['gwo._setAccount', 'UA-4901211-9']);
+  _gaq.push(['_setDomainName', 'softwaremk.org']);
+  _gaq.push(['gwo._trackPageview', '/2638783224/goal']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+<!-- End of Google Website Optimizer Tracking Script -->
+
+
     <script type="text/javascript">
         var qs = (function (a) {
             if (a == "") return {};
@@ -17,7 +32,8 @@
 
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-30222266-1']);
-        _gaq.push(['_trackPageview']);
+		_gaq.push(['_setDomainName', 'softwaremk.org']);
+		_gaq.push(['_trackPageview']);
 
         (function () {
             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
