--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,18 @@
-<!-- START PRIVACY POLICY CODE --><div style="font-family:arial"><br /><br /><strong>Do we use cookies?</strong> <br /><br />We do not use cookies.<br /><br /><strong>Do we disclose any information to outside parties?</strong> <br /><br />We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. This does not include trusted third parties who assist us in operating our website, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others rights, property, or safety. However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.<br /><br /><strong>California Online Privacy Protection Act Compliance</strong><br /><br />Because we value your privacy we have taken the necessary precautions to be in compliance with the California Online Privacy Protection Act. We therefore will not distribute your personal information to outside parties without your consent.<br /><br /><strong>Childrens Online Privacy Protection Act Compliance</strong> <br /><br />We are in compliance with the requirements of COPPA (Childrens Online Privacy Protection Act), our policy is located at .<br /><br /><strong>Online Privacy Policy Only</strong> <br /><br />This online privacy policy applies only to information collected through our website and not to information collected offline.<br /><br /><strong>Your Consent</strong> <br /><br />By using our site, you consent to our <a style='text-decoration:none; color:#3C3C3C;' href='http://www.freeprivacypolicy.com/' target='_blank'>privacy policy</a>.<br /><br /><strong>Changes to our Privacy Policy</strong> <br /><br />If we decide to change our privacy policy, we will post those changes on this page. <br /><br /><strong>Contacting Us</strong> <br /><br />If there are any questions regarding this privacy policy you may contact us using the information below. <br /><br />http://www.adafy.com<br />Hietatie 34<br />Jyväskylä 40530<br />Finland<br />info@adafy.com<br /><br /><span></span><span></span>This policy is powered by Free Privacy Policy and Rhino Support <a style='color:#000; text-decoration:none;' href='http://www.rhinosupport.com' target='_blank'>help desk software</a>.<span></span><span></span><span></span><!-- END PRIVACY POLICY CODE -->
+<html>
+<head>
+	<title>Adafy Oy Privacy Policy</title>
+</head>
+<body>
+	<h1>Our Privacy Policy</h1>
+
+	<p>Adafy Oy does not collect or publish any personal information. All connections with our servers will either be completely anonymous or use an unique random ID which doesn't contain any personal information about you.</p>
+
+	<p>Our application may communicate with a 3rd party server. This communication may be required if the application shows data from the 3rd party server. We don't transmit any details about you to these 3rd parties, unless the service requires this data in order to work properly (for example an IRC-server may require your email-address). In these cases our application will ask you for these details before submitting them.</p>
+
+	<p>Our applications may use Analytics services. These services are used to make sure that the application is working correctly and they allows us to improve our applications. The collected data is completely anonymous.</p>
+	
+	<h2>More Information</h2>
+
+	If you have any questions regarding our privacy policy, please contact <a href="mailto:privacy@adafy.com">privacy@adafy.com</a>.
+</body>	
+</html>
