--- a/privacy.html
+++ b/privacy.html
@@ -5,11 +5,13 @@
 <body>
 	<h1>Our Privacy Policy</h1>
 
-	<p>Adafy Oy does not collect or publish any personal information. All connections with our servers will either be completely anonymous or use an unique random ID which doesn't contain any personal information about you.</p>
+	<p>Adafy Oy does not collect or publish any personal information. We may receive your email address if you sign into an application. All connections with our servers will either be completely anonymous or use an unique random ID which doesn't contain any personal information about you.</p>
 
 	<p>Our application may communicate with a 3rd party server. This communication may be required if the application shows data from the 3rd party server. We don't transmit any details about you to these 3rd parties, unless the service requires this data in order to work properly (for example an IRC-server may require your email-address). In these cases our application will ask you for these details before submitting them.</p>
 
 	<p>Our applications may use Analytics services. These services are used to make sure that the application is working correctly and they allows us to improve our applications. The collected data is completely anonymous.</p>
+
+	<p>We may send you email regarding the product you have installed, if you have signed into the app. We will send email only about this application and we won't sell or misuse your email address in any way.</p>
 	
 	<h2>More Information</h2>
 
