--- a/navigation.html
+++ b/navigation.html
@@ -13,6 +13,9 @@
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Windows Phone Apps <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                     <li>
+                                        <a href="http://www.adatv.fi" >ada.tv</a>
+                                    </li>
+                                    <li>
                                         <a href="http://www.adafy.com/irc" >IRC7</a>
                                     </li>
                                     <li>
