--- a/privacy.html
+++ b/privacy.html
@@ -13,6 +13,10 @@
 
 	<p>We may send you email regarding the product you have installed, if you have signed into the app. We will send email only about this application and we won't sell or misuse your email address in any way.</p>
 	
+	<h2>Microsoft advertising</h2>
+	
+	<p>The application may show advertisements using Microsoft Advertising. You may change your personal advertising settings through this site: https://choice.microsoft.com/AdvertisementChoice/</p>
+	
 	<h2>More Information</h2>
 
 	If you have any questions regarding our privacy policy, please contact <a href="mailto:privacy@adafy.com">privacy@adafy.com</a>.
